...
    listOf(
        entry(Aroma.JAPANESE_PEAR, "梨", AromaTaste.SWEET, AromaComponent.GINJO, "果実類"),
        entry(Aroma.WHITE_PEACH, "白桃", AromaTaste.SWEET, AromaComponent.GINJO, "果実類"),
        entry(Aroma.APPLE, "リンゴ", AromaTaste.SWEET, AromaComponent.GINJO, "果実類"),
        entry(Aroma.MIKAN, "みかん", AromaTaste.SWEET, AromaComponent.GINJO, "果実類"),
        entry(Aroma.MUSCAT, "マスカット", AromaTaste.SWEET, AromaComponent.GINJO, "果実類"),
        entry(Aroma.MELON, "メロン", AromaTaste.SWEET, AromaComponent.GINJO, "果実類"),
        entry(Aroma.BANANA, "バナナ", AromaTaste.SWEET, AromaComponent.GINJO, "果実類"),
        entry(Aroma.PAPAYA, "パパイヤ", AromaTaste.SWEET, AromaComponent.GINJO, "果実類"),
        entry(Aroma.APRICOT, "アプリコット", AromaTaste.SWEET, AromaComponent.GINJO, "果実類"),
        entry(Aroma.PEAR, "洋梨", AromaTaste.SWEET, AromaComponent.GINJO, "果実類"),
        entry(Aroma.MANGO, "マンゴ", AromaTaste.SWEET, AromaComponent.GINJO, "果実類"),
        entry(Aroma.LYCHEE, "ライチ", AromaTaste.SWEET, AromaComponent.GINJO, "果実類"),
        entry(Aroma.UME_FLOWER, "梅", AromaTaste.SWEET, AromaComponent.GINJO, "花類"),
        entry(Aroma.ACACIA, "アカシア", AromaTaste.SWEET, AromaComponent.GINJO, "花類"),
        entry(Aroma.ORANGE_BLOSSOM, "オレンジ(花)", AromaTaste.SWEET, AromaComponent.GINJO, "花類"),
        entry(Aroma.MILK_VETCH, "レンゲ", AromaTaste.SWEET, AromaComponent.GINJO, "花類"),
...
